# Hashen

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.txt  README.md  README.txt  SECURITY.md  cursor_buildspec_3_MAX.txt  pyproject.toml  results.json
.github/workflows/: ci.yml  release.yml
_bundle_out/: manifest.json  verify_fail.json  verify_ok.json
_bundle_out/audit/: example_run.jsonl
_bundle_out/reports/: example_run.json
docs/: ARCHITECTURE.md  BRANCH_RECONCILIATION_NOTES.md  BRANCH_STATUS_REVIEW.md  CACHE_SPOT_CHECK.md  CLAIM_CODE_MAP.md  DEV_SETUP.md  DISCLOSURE_POLICY.md  FIXED_ENTROPY_RANGE.md  LIMITATIONS.md  MAKEFILE_WINDOWS.md  REASON_CODES.md  RELEASE_CHECKLIST.md  ROADMAP.md  SCHEMA_VERSIONS.md  SECURITY.md  TECHNICAL_POSITIONING.md  THREAT_MODEL.md  TSEC.md  USE_CASES.md  VERIFICATION_RECONCILIATION_NOTES.md  bundle-format.md  compliance-model.md  data-lifecycle.md  execution-security.md  policy-engine.md  schema-versioning.md  verification-model.md
examples/: README.md  cache_demo.py  expected_manifest_structure.json  expected_seal_structure.json  generate_fixtures.py  sample_verify_result.json
private/: README.txt
schemas/: bundle.schema.json  report.schema.json  verification_result.schema.json
scripts/: normalize_lf.py
src/hashen/: __init__.py  schemas.py
src/hashen/analytics/: __init__.py  entropy_engine.py  resonance.py  resonance_engine.py  routing.py  tsec.py  uncertainty.py
src/hashen/analytics/pathways/: __init__.py  audio.py  graph.py  image.py  text.py  timeseries.py
src/hashen/api/: __init__.py  app.py  models.py  server.py
src/hashen/audit/: __init__.py  event_log.py  models.py  verify.py
src/hashen/benchmarks/: __init__.py  datasets.py  report.py  runner.py
src/hashen/cache/: __init__.py  fingerprint_cache.py  models.py
src/hashen/cli/: __init__.py  bundle.py  main.py  retention.py  verify.py
src/hashen/compliance/: __init__.py  lifecycle.py  models.py  policy.py  privacy_tags.py  redaction.py  reporting.py  retention.py  rules.py
src/hashen/orchestrator/: __init__.py  orchestrator.py
src/hashen/provenance/: __init__.py  bundle_manifest.py  seal.py
src/hashen/sandbox/: __init__.py  constants.py  models.py  policy.py  posture.py  runner_interface.py  runner_subprocess.py  signing.py  validation.py
src/hashen/schemas/: __init__.py  audit_event.schema.json  bundle.schema.json  loader.py  seal.schema.json
src/hashen/utils/: __init__.py  canonical_json.py  clock.py  hashing.py  paths.py
src/hashen/verification/: __init__.py  verify.py
tests/: conftest.py  test_api.py  test_audit_chain.py  test_benchmarks.py  test_cache_correctness.py  test_compliance_policy.py  test_entropy_fixed_range.py  test_evidence_bundle.py  test_execution_hardening.py  test_pathways.py  test_resonance_cmer.py  test_retention.py  test_routing.py  test_sandbox_policy.py  test_schemas.py  test_seal_verify.py  test_tsec_cascade.py  test_verification_contract.py  test_verification_unified.py
tools/: retention_cleanup.py  run_evidence_bundle.py  verify_bundle.py
