[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hashen"
version = "0.1.0"
description = "Hashen trust layer: seal, audit chain, sandbox, cache, compliance"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "pip-audit>=2.7",
  "cyclonedx-bom>=4.5",
]
signing = ["cryptography>=41.0"]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP045"]

[tool.ruff.format]
quote-style = "double"
