[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hashen"
version = "0.1.0"
description = "Trust and provenance verification layer: seal (EPW), audit chain, cache, restricted execution"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["jsonschema>=4.0"]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "pip-audit>=2.7",
  "cyclonedx-bom>=4.5",
  "pre-commit>=3.7",
]
api = ["fastapi>=0.100", "uvicorn>=0.20", "python-multipart>=0.0.5"]
signing = ["cryptography>=41.0"]

[project.scripts]
hashen = "hashen.cli.main:main"
hashen-api = "hashen.api.app:run_server"
hashen-bundle = "hashen.cli.bundle:main"
hashen-verify = "hashen.cli.verify:main"
hashen-retention = "hashen.cli.retention:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hashen = ["schemas/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP045"]
per-file-ignores = { "examples/*.py" = ["E402"] }

[tool.ruff.format]
quote-style = "double"
